MDEV-24654 GTID event falsely marked transactional

GTID event can be falsely marked transactional in few cases including
binary-logging on the slave side upon execution.
In some execution branches bin-logging of non-transactional
events can be done through transactional cache. E.g see comments
in THD::binlog_write_table_map().

In order to not create the false 'trans' tag the fact of Xid event
logging is checked to compute correct argument to Gtid_log_event
ctor.